[gd_scene load_steps=5 format=3 uid="uid://y50tqx50niub"]

[ext_resource type="Script" path="res://scene/menus/loadgame.gd" id="1_8lg7u"]
[ext_resource type="PackedScene" uid="uid://smav7ilugg5n" path="res://scene/shaders/blur.tscn" id="1_efclp"]
[ext_resource type="Texture2D" uid="uid://c6btc2rmfyn1t" path="res://assets/graphics/black_backdrop.png" id="3_lbh8d"]

[sub_resource type="Theme" id="Theme_ywuus"]
ItemList/constants/v_separation = 11

[node name="LoadGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8lg7u")

[node name="Blur" parent="." instance=ExtResource("1_efclp")]
visible = false
layout_mode = 1

[node name="BlackBackdrop" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_lbh8d")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 34.0
offset_top = -225.0
offset_right = 834.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 0.588235)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 346.5
offset_top = -194.0
offset_right = 521.5
offset_bottom = -146.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Load Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 1048.0
offset_top = 408.0
offset_right = 1304.0
offset_bottom = 684.0
theme = SubResource("Theme_ywuus")
theme_override_font_sizes/font_size = 48
text_overrun_behavior = 0
item_count = 3
item_0/text = "Save File 1"
item_1/text = "Save File 2"
item_2/text = "Save File 3"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 411.5
offset_top = 160.5
offset_right = 456.5
offset_bottom = 191.5
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1680.0
offset_top = 700.5
offset_right = 1739.0
offset_bottom = 731.5
text = "Delete"

[node name="SaveImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1392.0
offset_top = 408.0
offset_right = 1704.0
offset_bottom = 584.0
expand_mode = 2
stretch_mode = 4

[node name="SaveData" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 1392.0
offset_top = 608.0
offset_right = 1688.0
offset_bottom = 664.0
columns = 2

[node name="LLabel" type="Label" parent="SaveData"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Location: "
uppercase = true

[node name="Location" type="Label" parent="SaveData"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TPLabel" type="Label" parent="SaveData"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Time SAVED: "
uppercase = true

[node name="TimePlayed" type="Label" parent="SaveData"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="item_activated" from="SaveList" to="." method="_on_save_list_item_activated"]
[connection signal="item_clicked" from="SaveList" to="." method="_on_save_list_item_clicked"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
